# Practice

CW1/: README.md  pyproject.toml  requirements.txt
